test/patterns/negative/int3.mli
(*@ type ti = N of integer *)
(*@ function f2 (x : ti) : unit =
      match x with
      | N 0
      | N 1
      | N 3 -> () *)
